# IntrAgenziaApp

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/intr_agenzia_app/: MainActivity.kt
backend/: docker-compose.yml  pyproject.toml  test_login.py
backend/app/: main.py  redis_client.py  scraper.py  settings.py
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/pages/: home.dart  login.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  router.dart
lib/io/: dio_interceptor.dart  secure_storage_handler.dart
lib/pages/: home.dart  login.dart
lib/scraper/: name_node.dart  username.dart
lib/widgets/: menu_list_tile.dart
test/: widget_test.dart
