[project]
name = "backend"
version = "0.1.0"
description = "backend webscraper per il sito della mensa"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.122.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]
